--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -4,6 +4,18 @@ jobs:
   secrets:
     runs-on: ubuntu-latest
     steps: 
-    - run: echo $MY_SECRET 
-    env: 
-      MY_SECRET: ${{ secrets.MY_SECRET }}
+    - name: shell-cmd
+    - run: |
+        echo $MY_SECRET 
+      shell: bash
+      env: 
+        MY_SECRET: ${{ secrets.MY_SECRET }}
+    
+    - name: python-cmd
+    - run: |
+        import os
+        os.getenv("MY_SECRET")
+      shell: python
+      env: 
+        MY_SECRET: ${{ secrets.MY_SECRET }}
+    
